kubernetes-networks/canary/deployment-web-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-canary-second
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-canary-second
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  template:
    metadata:
      name: web-canary-second
      labels:
        app: web-canary-second
    spec:
      containers:
        - name: web-canary-second
          image: avecake/mynginx:1
          readinessProbe:
            httpGet:
              port: 8000
              path: /index.html
          livenessProbe:
            tcpSocket:
              port: 8000
          volumeMounts:
            - mountPath: /app
              name: app
      volumes:
        - name: app
          emptyDir: { }
