kubernetes-networks/canary/svc-web-first.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-prod-first-svc
spec:
  selector:
    app: web-prod-first
  type: ClusterIP
  clusterIP: None
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
